{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Touch",
            "id": "a8239bf4-8868-4cc2-b442-9f9cf4a213e0",
            "actions": [
                {
                    "name": "PrimaryTouchContact",
                    "type": "PassThrough",
                    "id": "d2b8aef2-16f5-4e8b-b597-4151b3bdc329",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryTouchPosition",
                    "type": "PassThrough",
                    "id": "0712bd1d-6144-482e-9ae6-09ab47a093dc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b8534c0b-32d8-4c5b-b13a-189afc4f7dbf",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb5b0e97-2a49-4f97-b2b1-a0d056f2c404",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}